[tool.poetry]
name = "repl_nix_wiffle-ball-app"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
SQLAlchemy = "^2.0.7"
xds-protos = "^0.0.11"
bs4 = "^0.0.1"
google-api-python-client = "^2.82.0"
google-auth-oauthlib = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
